layout ready for 60%

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="todo__high">
                 <h2>high</h2>
                 <div class="input-container todo__high-input_container">            
-                    <input type="text" class="todo__high-text_input" name="todo__high-input" value="Добавить важных дел">
+                    <input type="text" class="todo__high-text_input" name="todo__high-input" placeholder="Добавить важных дел">
                     <div class="svg-container add_btn">
                         <svg width="17"  height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <line y1="-0.5" x2="20.7803" y2="-0.5" transform="matrix(0.710506 0.703691 -0.65218 0.758064 1 1)" stroke="#998899"/>
@@ -21,16 +21,74 @@
                         </svg>
                     </div>
                 </div>
+                <div class="tasks">
+                    <div class="task">
+                        <input type="checkbox" name="" id="task-3">
+                        <label for="task-3">
+                            <span class="custom-checkbox"></span>
+                            <div class="task-text">
+                                Вот вам и супер интересная тема. Вы наверняка заметили что ваши файлы с кодом становятся все объемнее, что
+                                хочется
+                                вынести некоторые вещи куда-то за пределы основной программы
+                            </div>
+                        </label>
+                        <button class="btn delet-task"><svg width="17" height="16" viewBox="0 0 17 16" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <line y1="-0.5" x2="20.7803" y2="-0.5" transform="matrix(0.710506 0.703691 -0.65218 0.758064 1 1)"
+                                    stroke="#998899" />
+                                <line y1="-0.5" x2="20.8155" y2="-0.5" transform="matrix(0.693335 -0.720616 0.670126 0.742247 1.56787 16)"
+                                    stroke="#998899" />
+                            </svg></button>
+                    </div>
+                </div>
             </div>
+            
             <div class="todo__low">
                 <h2>low</h2>
                 <div class="input-container todo__low-input_container">            
-                    <input type="text" class="todo__low-text_input" name="todo__low-input" value="Добавить">
+                    <input type="text" class="todo__low-text_input" name="todo__low-input" placeholder="Добавить">
                     <div class="svg-container add_btn">
                         <svg width="17"  height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <line y1="-0.5" x2="20.7803" y2="-0.5" transform="matrix(0.710506 0.703691 -0.65218 0.758064 1 1)" stroke="#998899"/>
                             <line y1="-0.5" x2="20.8155" y2="-0.5" transform="matrix(0.693335 -0.720616 0.670126 0.742247 1.56787 16)" stroke="#998899"/>
                         </svg>
+                    </div>
+                    
+                </div>
+                <div class="tasks">
+                    <div class="task">
+                        <input type="checkbox" name="" id="task-1">
+                        <label for="task-1">
+                            <span class="custom-checkbox"></span>
+                            <div class="task-text">
+                            Вот вам и супер интересная тема. Вы наверняка заметили что ваши файлы с кодом становятся все объемнее, что хочется
+                            вынести некоторые вещи куда-то за пределы основной программы
+                            </div>
+                        </label>
+                        <button class="btn delet-task"><svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <line y1="-0.5" x2="20.7803" y2="-0.5" transform="matrix(0.710506 0.703691 -0.65218 0.758064 1 1)"
+                                stroke="#998899" />
+                            <line y1="-0.5" x2="20.8155" y2="-0.5" transform="matrix(0.693335 -0.720616 0.670126 0.742247 1.56787 16)"
+                                stroke="#998899" />
+                        </svg></button>
+                    </div>
+                    <div class="task">
+                        <input type="checkbox" name="" id="task-2">
+                        <label for="task-2">
+                            <span class="custom-checkbox"></span>
+                            <div class="task-text">
+                                Вот вам и супер интересная тема. Вы наверняка заметили что ваши файлы с кодом становятся все объемнее, что
+                                хочется
+                                вынести некоторые вещи куда-то за пределы основной программы
+                            </div>
+                        </label>
+                        <button class="btn delet-task"><svg width="17" height="16" viewBox="0 0 17 16" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <line y1="-0.5" x2="20.7803" y2="-0.5" transform="matrix(0.710506 0.703691 -0.65218 0.758064 1 1)"
+                                    stroke="#998899" />
+                                <line y1="-0.5" x2="20.8155" y2="-0.5" transform="matrix(0.693335 -0.720616 0.670126 0.742247 1.56787 16)"
+                                    stroke="#998899" />
+                            </svg></button>
                     </div>
                 </div>
             </div>
