--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
                         <label for="task-2">
                             <span class="custom-checkbox"></span>
                             <div class="task-text">
-                                Вот вам и супер интересная тема. Вы наверняка заметили что ваши файлы с кодом становятся все объемнее, что
-                                хочется
-                                вынести некоторые вещи куда-то за пределы основной программы
+                                Посмотреть ютубчик
                             </div>
                         </label>
                         <button class="btn delet-task"><svg width="17" height="16" viewBox="0 0 17 16" fill="none"
