--- a/index.html
+++ b/index.html
@@ -21,24 +21,7 @@
                         </svg>
                     </div>
                 </div>
-                <div class="tasks todo__high-tasks">
-                    <!-- <div class="task">
-                        <input type="checkbox" name="" id="task-3">
-                        <label for="task-3">
-                            <span class="custom-checkbox"></span>
-                            <div class="task-text">
-                                eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
-                            </div>
-                        </label>
-                        <button class="btn delet-task"><svg width="17" height="16" viewBox="0 0 17 16" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <line y1="-0.5" x2="20.7803" y2="-0.5" transform="matrix(0.710506 0.703691 -0.65218 0.758064 1 1)"
-                                    stroke="#998899" />
-                                <line y1="-0.5" x2="20.8155" y2="-0.5" transform="matrix(0.693335 -0.720616 0.670126 0.742247 1.56787 16)"
-                                    stroke="#998899" />
-                            </svg></button>
-                    </div> -->
-                </div>
+                <div class="tasks todo__high-tasks"></div>
             </div>
             
             <div class="todo__low">
@@ -64,7 +47,7 @@
     <template id="maketask">
         <div class="task">
             <input type="checkbox">
-            <label >
+            <label>
                 <span class="custom-checkbox"></span>
                 <div class="task-text"></div>
             </label>
